--- a/project-submit-3c5gsu34/index.html
+++ b/project-submit-3c5gsu34/index.html
@@ -14,7 +14,7 @@
     <style>
         /* CSS Variables */
         :root {
-            --primary-bg: #0a0a0f;
+            --primary-bg: #0a0a1a;
             --card-bg: rgba(20, 20, 30, 0.8);
             --card-border-color: rgba(138, 43, 226, 0.3);
             --accent-purple: #8a2be2;
