--- a/project-submit-3c5gsu34/index.html
+++ b/project-submit-3c5gsu34/index.html
@@ -1201,6 +1201,14 @@
             overflow-wrap: break-word;
             hyphens: none;
         }
+  p, h1, h2, h3, h4, label, .field-hint, .form-section-title, .success-message p, .success-message h2, .subtle-glow {
+      -webkit-hyphens: none !important;
+      -ms-hyphens: none !important;
+      hyphens: none !important;
+      word-break: normal !important;
+      overflow-wrap: break-word !important;
+      line-height: 1.6 !important; 
+  }
     </style>
 </head>
 <body>
